# micro-monitor

./: .env_example  Cargo.toml  README.md  run.sh
src/: config.rs  http.rs  logger.rs  mail.rs  main.rs
