[package]
name = "micro-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"        # optional: rolling files
tracing-error = "0.2"           # optional: better error contexts
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "serde", "smtp-transport", "tokio1-rustls-tls"] }
regex = "1"
anyhow = "1.0.99"
rustls = "0.23.31"
